add inline sun level hint

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                             <p>Sun Levels Currently
                                 <span id="sun-level"></span>
                                 Degrees Fahrenheit
+                                <span id="temp-indicator"></span>
                             </p>
                             <input type="range" min="30" max="100" value="60" class="slider" id="sun-number">
                         </div>
@@ -67,6 +68,7 @@
                             <p>Water Levels Currently
                                 <span id="water-level"></span>
                                 Gallons (Total)
+                                <span id="water-indicator"></span>
                             </p>
                             <input type="range" min="20" max="90" value="35" class="slider" id="water-number">
                         </div>
